# Houm-API

./: READMe.md  main.py  pyproject.toml
db/: db_setup.py
db/crud/: employees.py  properties.py  visitis.py
db/models/: employee.py  property.py  visit.py
pydantic_schemas/: employee.py  property.py  visit.py
routes/: employees.py  properties.py  visits.py
tests/: conftest.py
